FullQa New/src/eLoader/LoadSMART App/objects/field_mapping__c.object
<CustomObject>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Data Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select_Field__c</fullName>
        <label>Field</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select_Object__c</fullName>
        <label>Object</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spreadsheet_column_number__c</fullName>
        <label>SS Column #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>field mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Select_Object__c</columns>
        <columns>Select_Field__c</columns>
        <columns>Spreadsheet_column_number__c</columns>
        <columns>Field_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>field mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>field mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>